implemented /oauth/user
